# hpc-training

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  filters.hpp  kernel.cl  main.cpp
.github/workflows/: cmake.yml  codeql-analysis.yml
